add some config